# rpi-screenbrightness-mqtt

./: pyproject.toml
rpi_screenbrightness_mqtt/: run.py
